Skip backgrounds when the computed tile size is empty

The computed background geometry tile size may end up empty due to
pixel-snapping.  In that case, all derived calculations are invalid and
we should not attempt to draw the background.

R=schenney@chromium.org
BUG=808065

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: If14ea82ca158318374296184a8f44856c19dcb64
Reviewed-on: https://chromium-review.googlesource.com/902148
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534545}
Former-commit-id: 29b1d41472649f7d60ab0de918ae8ab88259544c